--- a/content/post/2021-09-27-visualizing-big-data-with-trelliscope-in-r/index.en.Rmd
+++ b/content/post/2021-09-27-visualizing-big-data-with-trelliscope-in-r/index.en.Rmd
@@ -434,7 +434,21 @@ ggplot(daily_may, aes(start_hod, n, color = membership)) +
 We have constructed a dataset that is nearly ready for visualization, route_hod. Let's add in a few more variables that will be useful as cognostics as we anticipate interactively viewing the display.
 
 ```{r}
+# Function to construct a Google maps URL with cycling directions
+make_gmap_url <- function(start_lat, start_lon, end_lat, end_lon) {
+  paste0("https://www.google.com/maps/dir/?api=1",
+    "&origin=", start_lat, ",", start_lon,
+    "&destination=", end_lat, ",", end_lon,
+    "&travelmode=bicycling")
+}
 
+# Compute tot_rides, weekday_diff, and map_url
+route_hod_updated <- route_hod %>%
+  group_by(start_station_code, end_station_code) %>%
+  mutate(
+    tot_rides = sum(n),
+    weekday_diff = mean(n[weekday == "workweek"]) - mean(n[weekday == "weekend"]),
+    map_url = make_gmap_url(start_lat, start_lon, end_lat, end_lon))
 ```
 
 ## 4-10 Visualizing the data: Counts by hour-of-day
@@ -444,7 +458,11 @@ We can now create a Trelliscope display using ggplot2. We want to plot number of
 route_hod is available in your workspace, but it only contains the top 8 routes. We will view the result for all top routes in the final exercise.
 
 ```{r}
-
+# Create the plot
+ggplot(route_hod, aes(start_hod, n, color=weekday)) +
+  geom_point(size = 3) +
+  facet_trelliscope(~ start_station_name + end_station_name, nrow=2, ncol=4) +
+  theme(legend.position = "none")
 ```
 
 ## 4-11 Evaluating the visualization
