--- a/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
+++ b/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
@@ -23,6 +23,9 @@ nuke_df <-  read_csv("nuke_df.csv")
 obesity_df <-  read_csv("obesity_df.csv")
 nuke_df2 <-  read_csv("nuke_df2.csv")
 bond_df <-  read_csv("bond_df.csv")
+bird_df <-  read_csv("bird_df.csv")
+stock_df <-  read_csv("stock_df.csv")
+space_dogs_df <-  read_csv("space_dogs_df.csv")
 olympic <- readRDS("olympic_medals_top_10.rds")
 ```
 
@@ -251,7 +254,7 @@ obesity_df %>%
 
 You've been given a James Bond movie dataset (bond_df) and want to visualize the number of movies that Bond actors have featured in per decade. However, the data is in an untidy format with the decade values captured in the column headers. You'll tidy this dataset to give each variable its own column.
 
-```{r}
+```{r warning=FALSE}
 bond_df %>% 
   # Pivot the data to long format
   pivot_longer(
@@ -273,15 +276,63 @@ bond_df %>%
 Every year New Zealanders vote en masse to decide which species gets the bird of the year trophy. The contest is organized by the Forest & Bird agency which allows each person to give points to up to five birds (first pick gets 5 points, second 4, …). Your job is to decide this year's winner from the messy dataset that's been pre-loaded for you as bird_df.
 
 ```{r}
+bird_df
 
+bird_df %>%
+  # Pivot the data to create a two column data frame
+  pivot_longer(
+    c(points_1, points_2, points_3, points_4, points_5),
+    names_to = "points",
+    names_prefix = "points_",
+    names_transform = list(points = as.integer),
+    values_to = "species",
+    values_drop_na = TRUE
+  )
 ```
+
+Alternative solution...
+
+```{r}
+bird_df %>%
+  # Pivot the data to create a two column data frame
+  pivot_longer(
+     starts_with("points_"),
+    names_to = "points",
+    names_prefix = "points_",
+    names_transform = list(points = as.integer),
+    values_to = "species",
+    values_drop_na = TRUE
+  ) %>%
+  group_by(species) %>% 
+  summarize(total_points=sum(points)) %>% 
+  slice_max(total_points, n = 5)
+```
+
 
 ## 2-7 Big tech stock prices
 
 You're an analyst at an investment firm and want to visualize the weekly closing prices of five big tech firms' stocks. However, the dataset you've been handed (stock_df) is messy and has the year and week variables stored in the column headers. You'll pivot this data into a tidy format, extract the variables from the headers, and create a line plot.
 
 ```{r}
+stock_df
 
+ss <- stock_df %>% 
+  # Pivot the data to create 3 new columns: year, week, price
+  pivot_longer(
+    -company,
+    names_to = c("year", "week"),
+    values_to = "price",
+    names_sep = "_week",
+    names_transform = list(year = as.integer, week = as.integer)
+  ) 
+
+ss
+
+ss %>%
+  # Create a line plot with price per week, color by company
+  ggplot(aes(week, price, color=company)) +
+  geom_line() +
+  facet_grid(. ~ year)
 ```
 
 ## 2-9 Soviet space dogs, the dog perspective
@@ -293,6 +344,8 @@ Your goal is to reshape this dataset so that for each launch, each dog has a row
 The challenge is that in the column headers (name_1, name_2, gender_1, and gender_2), the part before the _ separator can point to two different variables (name and gender), while the second part always points to the dog ID (1st or 2nd dog).
 
 ```{r}
+space_dogs_df
+
 
 ```
 
