--- a/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
+++ b/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
@@ -28,6 +28,7 @@ stock_df <-  read_csv("stock_df.csv")
 space_dogs_df <-  read_csv("space_dogs_df.csv")
 who_df <-  read_csv("who_df.csv")
 dog_df <-  read_csv("dog_df.csv")
+space_dogs_df2  <-  read_csv("space_dogs_df2.csv")
 olympic <- readRDS("olympic_medals_top_10.rds")
 ```
 
@@ -416,8 +417,24 @@ Remember the USSR space dogs dataset1? You changed it to a long format so that f
 You'll reshape and investigate space_dogs_df to find the answer.
 
 ```{r}
-space_dogs_df
+space_dogs_df2
+
+space_dogs_df2 %>% 
+  # Pivot the data to a wider format
+  pivot_wider(names_from = dog_id, values_from = gender, names_prefix = "gender_")
 ```
+
+```{r}
+space_dogs_df2 %>% 
+  # Pivot the data to a wider format
+  pivot_wider(names_from = dog_id, values_from = gender, names_prefix = "gender_") %>% 
+  # Drop rows with NA values
+  drop_na() %>% 
+  # Create a Boolean column on whether both dogs have the same gender
+  mutate(same_gender= ifelse(gender_1 == gender_2, 1, 0)) %>% 
+  summarize(pct_same_gender = mean(same_gender))
+```
+
 
 ## 2-14 Planet temperature & distance to the Sun
 
